Normalize .gitignore to root‑anchored patterns

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-Extraction/
-KNOWLEDGE/
-uploads/
-chat.txt
-app/__pycache__/
-venv/
-.venv-weaviate/
+/.venv/
+/.venv-weaviate/
+
 __pycache__/
-*.pyc
-.vscode/
+/*.pyc
+
+/uploads/
+
 .DS_Store
 *.swp
+/Extraction/
+/KNOWLEDGE/
+/chat.txt
